rust/crates/codec-html/src/snapshots/encode_html_fragments@superscript.html.snap
---
source: rust/crates/codec-html/src/encode.rs
expression: encoded
input_file: fixtures/fragments/html/superscript.html

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <div data-itemprop="content">
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Superscripts like CO<sup itemtype="http://schema.stenci.la/Superscript" itemscope>2</sup>.</p>
  </div>
</article>
