rust/crates/codec-html/src/snapshots/encode_html_fragments@thematic-break.html.snap
---
source: rust/crates/codec-html/src/encode.rs
expression: encoded
input_file: fixtures/fragments/html/thematic-break.html

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <div data-itemprop="content">
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>First theme.</p>
    <hr itemtype="http://schema.stenci.la/ThematicBreak" itemscope/>
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Second theme.</p>
    <hr itemtype="http://schema.stenci.la/ThematicBreak" itemscope/>
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Third theme.</p>
  </div>
</article>
