rust/crates/codec-html/src/snapshots/encode_html_fragments@video.html.snap
---
source: rust/crates/codec-html/src/encode.rs
expression: encoded
input_file: fixtures/fragments/html/video.html

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <div data-itemprop="content">
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Prefers to use `source` element:<video itemtype="http://schema.org/VideoObject" itemscope  controls>
        <source src="video.mp4" type="video/mp4">
        </source>
      </video>
    </p>
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Falls back to using `src` on `video` element:<video itemtype="http://schema.org/VideoObject" itemscope  controls>
        <source src="video.mp4">
        </source>
      </video>
    </p>
  </div>
</article>
